[package]
name = "laggar"
version = "0.9.2"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/laggar"
repository = "https://github.com/EthanJustice/laggar"
license = "MIT"
publish = false

[dependencies]
crossterm = "~0.17.5"
html2md = "~0.2.9"
reqwest = { version = "~0.10.6", features = ["blocking"] }
clap = "~2.33.1"