[package]
name = "laggar"
version = "0.7.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "~0.17.5"
html2md = "~0.2.9"
reqwest = { version = "~0.10.6", features = ["blocking"] }
clap = "~2.33.1"